--- a/Source/BioMod/BioTech.csproj
+++ b/Source/BioMod/BioTech.csproj
@@ -52,9 +52,12 @@
     <Compile Include="BioBuilding\BioBuildingSapling.cs" />
     <Compile Include="BioBuilding\BioBuildingSeedling.cs" />
     <Compile Include="BioBuilding\BioBuildingBase.cs" />
+    <Compile Include="BioBuilding\GenericWallMature.cs" />
     <Compile Include="BioProperties.cs" />
     <Compile Include="BioThingDefOf.cs" />
     <Compile Include="BioThingDef.cs" />
+    <Compile Include="Hedge\HedgePlanter.cs" />
+    <Compile Include="Hedge\HedgeSprout.cs" />
     <Compile Include="TestWall\TestPlanter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestWall\TestWallMature.cs" />
